--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -33,6 +33,6 @@
 .btn:hover,
 .btn:focus {
     background-color: $secondary-color;
-    color: #000000;
+    color: #ffffff;
     box-shadow: 0 8px 17px 2px rgba(0,0,0, .07), 0 3px 14px 2px rgba(0,0,0, .06), 0 5px 5px -3px rgba(0,0,0, .1);
 }
