--- a/assets/css/components/_variables.scss
+++ b/assets/css/components/_variables.scss
@@ -25,7 +25,8 @@ $font-color: #272625 !default;
 $font-accent-color: #a2907c !default;
 $heading-font-color: #11110f !default;
 $primary-color: #6e6356 !default;
-$secondary-color: #e3d9db !default;
+$secondary-color: #000000 !default;
+$highlight-color: #e2d7d7;
 
 // Fonts
 $font-stack: 'Raleway', sans-serif !default;
@@ -35,18 +36,18 @@ $heading-font-weight: 300 !default;
 $signature-font-stack: 'emithascript' !default;
 $signature-font-weight: normal !default;
 
-$h1-fontsize-mobile: 2rem !default;
-$h2-fontsize-mobile: 1.75rem !default;
-$h3-fontsize-mobile: 1.5rem !default;
+$h1-fontsize-mobile: 2.5rem !default;
+$h2-fontsize-mobile: 2rem !default;
+$h3-fontsize-mobile: 1.75rem !default;
 $h4-fontsize-mobile: 1.5rem !default;
-$h5-fontsize-mobile: 1.2rem !default;
-$h6-fontsize-mobile: 1rem !default;
-$h1-fontsize: 3rem !default;
-$h2-fontsize: 2.75rem !default;
-$h3-fontsize: 2.25rem !default;
-$h4-fontsize: 2rem !default;
-$h5-fontsize: 1.5rem !default;
-$h6-fontsize: 1.25rem !default;
+$h5-fontsize-mobile: 1.25rem !default;
+$h6-fontsize-mobile: 1.15rem !default;
+$h1-fontsize: 3.5rem !default;
+$h2-fontsize: 3.25rem !default;
+$h3-fontsize: 2.75rem !default;
+$h4-fontsize: 2.5rem !default;
+$h5-fontsize: 1.75rem !default;
+$h6-fontsize: 1.5rem !default;
 $h1-fontsize-desktop: 4rem !default;
 $h2-fontsize-desktop: 3.5rem !default;
 $h3-fontsize-desktop: 3.25rem !default;
