Fixed style bugs

--- a/assets/css/components/_header.scss
+++ b/assets/css/components/_header.scss
@@ -71,12 +71,12 @@
     overflow-y: auto;
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.4s ease, visibility 0s ease 0.4s;
+    transition: opacity 0.4s ease 0s, visibility 0s ease 0.4s;
 
     &.hg__active {
         opacity: 1;
         visibility: visible;
-        transition: opacity 0.8s ease, visibility 0s ease;
+        transition: opacity 0.8s ease 0s, visibility 0s ease 0s;
 
         #hg__nav {
             li {
