--- a/assets/css/components/_index.scss
+++ b/assets/css/components/_index.scss
@@ -233,7 +233,7 @@ html[data-js] {
     }
 }
 
-// Aboout section
+// About section
 #hg__about {
     margin-top: 0;
     margin-bottom: 108px;
@@ -251,7 +251,11 @@ html[data-js] {
     color: #ffffff;
     
     #hg__about-image {
-        display: none;
+        display: block;
+        max-width: 240px;
+        border-radius: 120px;
+        overflow: hidden;
+        margin: 0 auto 32px;
 
         a {
             display: block;
@@ -292,6 +296,9 @@ html[data-js] {
             display: block;
             margin-top: -180px;
             margin-bottom: -180px;
+            border-radius: 0;
+            overflow: hidden;
+            max-width: none;
         }
 
         #hg__about-text {
@@ -355,12 +362,12 @@ html[data-js] {
             cursor: pointer;
             position: absolute;
             top: 50%;
-            left: 0px;
+            left: -6px;
             transform: translate(0, -50%);
             -webkit-transform: translate(0, -50%);
 
             svg {
-                width: 32px;
+                width: 64px;
 
                 path {
                     transition: all 0.4s ease;
@@ -369,7 +376,7 @@ html[data-js] {
 
             &:last-child {
                 left: auto;
-                right: 0px;
+                right: -6px;
             }
         }
 
